<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.HelloFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_fragment_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_description"
        app:layout_constraintEnd_toEndOf="@+id/img_main"
        app:layout_constraintStart_toStartOf="@+id/img_main"
        app:layout_constraintTop_toBottomOf="@+id/img_main"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/img_main"
        android:layout_width="wrap_content"
        android:layout_height="430dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/hello_fragment_image_content_description"
        android:src="@drawable/hello"
        app:layout_constraintBottom_toTopOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/green_primary"
        android:text="@string/hello_fragment_start_button_text"
        android:textColor="#FDFDFD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        app:layout_constraintVertical_chainStyle="spread"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hello_fragment_description"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/button_start"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintVertical_chainStyle="packed" />
</androidx.constraintlayout.widget.ConstraintLayout>