<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.fragments.CharacterDetailsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"  >

<androidx.core.widget.NestedScrollView
    android:id="@+id/view_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="45dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="45dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_photo"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                tools:ignore="ImageContrastCheck,contentDescription"
                tools:src="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/green_secondary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cv_image"
            app:layout_constraintStart_toStartOf="@+id/cv_image"
            app:layout_constraintTop_toBottomOf="@+id/cv_image"
            tools:text="Rick Sanches" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_name">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_status_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@drawable/cell_shape_primary"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/character_details_fragment_status_label"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tv_status_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/cell_shape_secondary"
                    android:padding="1dp"
                    tools:text="Alive" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_species_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@drawable/cell_shape_primary"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/character_details_fragment_species_label"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tv_species_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/cell_shape_secondary"
                    android:padding="1dp"
                    tools:text="Human" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_gender_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@drawable/cell_shape_primary"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/character_details_fragment_gender_label"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tv_gender_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/cell_shape_secondary"
                    android:padding="1dp"
                    tools:text="Male" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_origin_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@drawable/cell_shape_primary"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/character_details_fragment_origin_label"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tv_origin_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/cell_shape_secondary"
                    android:padding="1dp"
                    tools:text="Earth (C-137)" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_location_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@drawable/cell_shape_primary"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/character_details_fragment_location_label"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tv_location_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/cell_shape_secondary"
                    android:padding="1dp"
                    tools:text="Citadel of Ricks" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/tv_episodes_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/character_details_fragment_episodes_label"
            app:layout_constraintEnd_toEndOf="@+id/tableLayout"
            app:layout_constraintStart_toStartOf="@+id/tableLayout"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_episodes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_episodes_label"
            app:layout_constraintStart_toStartOf="@+id/tv_episodes_label"
            app:layout_constraintTop_toBottomOf="@id/tv_episodes_label"
            tools:listitem="@layout/episode_item" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
    <FrameLayout
        android:id="@+id/frame_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/pb_busy"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundTintMode="add"
            android:indeterminate="true"
            android:indeterminateTint="@color/green_primary"
            android:indeterminateTintMode="src_atop" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>